<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_presentation"
            android:icon="@drawable/ic_presentation"
            android:title="@string/presentation" />
        <item
            android:id="@+id/nav_create_cv"
            android:icon="@drawable/ic_create_cv"
            android:title="@string/create_cv" />
        <item
            android:id="@+id/nav_update_cv"
            android:icon="@drawable/ic_update_cv"
            android:title="@string/update_resume" />

        <item
            android:id="@+id/nav_offer"
            android:icon="@drawable/ic_offer"
            android:title="@string/offer" />
        <item
            android:id="@+id/nav_offer_favorite"
            android:icon="@drawable/ic_offer_favorite"
            android:title="@string/offer_favorite" />
    </group>
</menu>