<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="@dimen/dim_top1"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/dim_title"
        android:text="@string/connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/txtLogin"
        android:layout_marginTop="@dimen/dim_title"
        android:textSize="@dimen/dim_all"
        android:hint="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:inputType="textPassword"
        android:id="@+id/txtPassword"
        android:layout_marginTop="@dimen/dim_title"
        android:textSize="@dimen/dim_all"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/bntConnect"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:text="@string/connect"
        android:layout_marginLeft="@dimen/dim_left"
        android:layout_marginTop="@dimen/dim_top"
        android:padding="@dimen/dim_all"
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_left" />
    <Button
        android:id="@+id/bntSignUp"
        android:textColor="#ffffff"
        android:background="#Ff37f2"
        android:text="@string/sign_up"
        android:layout_marginTop="@dimen/dim_top"
        android:layout_marginLeft="@dimen/dim_left"
        android:padding="@dimen/dim_all"
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_left" />

</LinearLayout>