<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_presentation">

    <fragment
        android:id="@+id/nav_presentation"
        android:name="com.example.gestiondemploie.ui.home.HomeFragment"
        android:label="@string/presentation"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_offer"
        android:name="com.example.gestiondemploie.OfferFragment"
        android:label="@string/offer"
        tools:layout="@layout/fragment_offer" />

    <fragment
        android:id="@+id/nav_create_favorite"
        android:name="com.example.gestiondemploie.ui.gallery.GalleryFragment"
        android:label="@string/update_favorite"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_update_cv"
        android:name="com.example.gestiondemploie.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

</navigation>